--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:/ntGVGEBW7dgZGFEsRm6QsS2CbqbLCVI/zCbsdKoxVo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_PORT=5433
+DB_DATABASE=hotel_decameron
+DB_USERNAME=postgres
+DB_PASSWORD=postgres123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
