environment variable changes

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,21 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=base64:/ntGVGEBW7dgZGFEsRm6QsS2CbqbLCVI/zCbsdKoxVo=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_NAME=Hoteles-Backend
+APP_ENV=production
+APP_KEY=base64:qtF1chsqEGgp/QTjidAFtTgShZOBOP2H7fnlL3ISjZI=
+APP_DEBUG=false
+APP_URL=https://hoteles-backend.onrender.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=5433
-DB_DATABASE=hotel_decameron
+DB_HOST=yamabiko.proxy.rlwy.net
+DB_PORT=28358
+DB_DATABASE=railway
 DB_USERNAME=postgres
-DB_PASSWORD=postgres123
+DB_PASSWORD=tu_contraseña_real
+DB_PASSWORD=UugBAzeIfrYOZNPoJQGJEBUPwPtuCPTx
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
