--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Hoteles-Backend
 APP_ENV=production
 APP_KEY=base64:BckhykY/K38pIGSHvPrQZX3AqTL+iWl76efFoRMsXvw=
 APP_DEBUG=false
-APP_URL=https://hoteles-backend.onrender.com
+APP_URL=https://hoteles-decameron-production.up.railway.app
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
