Changed list, create, update, delete and assign hotels

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,20 @@
-APP_NAME=Hoteles-Backend
-APP_ENV=production
+APP_NAME=Laravel
+APP_ENV=local
 APP_KEY=base64:BckhykY/K38pIGSHvPrQZX3AqTL+iWl76efFoRMsXvw=
-APP_DEBUG=false
-APP_URL=https://hoteles-decameron-production.up.railway.app
+APP_DEBUG=true
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-
+#local configuraion
 DB_CONNECTION=pgsql
-DB_HOST=yamabiko.proxy.rlwy.net
-DB_PORT=28358
-DB_DATABASE=railway
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_DATABASE=hotel_decameron
 DB_USERNAME=postgres
-DB_PASSWORD=UugBAzeIfrYOZNPoJQGJEBUPwPtuCPTx
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
